fixed mobile Add alignment

--- a/src/components/AddPageStyle.css
+++ b/src/components/AddPageStyle.css
@@ -30,5 +30,6 @@
 
 .align {
     display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
     
 }
